<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.task.TaskActivity"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="12dp"
            android:text="@string/add_new_task"
            android:textAppearance="?textAppearanceHeadline5"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="12dp"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_round_arrow_back_24" />


    </FrameLayout>

    <com.hamiddev.todolist.ui.scroll.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:paddingBottom="64dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cont0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="22dp"
                android:paddingEnd="12dp"
                android:background="?colorPrimary"
                android:paddingBottom="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/task_title"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:hint="@string/task_title_hint"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/text_cursor"
                    app:backgroundTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:lines="1"
                    android:text="@string/task_date"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:hint="@string/task_date_hint"
                    android:focusable="false"
                    android:maxLines="1"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/text_cursor"
                    app:backgroundTint="@color/white" />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-50dp"
                android:background="@drawable/round">


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="28dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_hour"
                        android:layout_gravity="right"
                        android:textAppearance="?textAppearanceBody1"
                        android:layout_marginBottom="12dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/startHourLa"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/startHourEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:nextFocusLeft="@id/endHourLa"
                            android:nextFocusForward="@id/endHourLa" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="14dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_hour"
                        android:layout_gravity="right"
                        android:textAppearance="?textAppearanceBody1"
                        android:layout_marginBottom="12dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/endHourLa"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/endHourEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout3"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:textAppearance="?textAppearanceBody1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="28dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="top"
                        android:minHeight="100dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/categoryTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceBody1"
                    android:text="@string/category"
                    app:layout_constraintTop_toBottomOf="@id/descriptionLa"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="28dp"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/categoryGp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/categoryTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:singleSelection="true"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="28dp"
                    android:layout_marginStart="28dp"/>

                <LinearLayout
                    android:id="@+id/categoryContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/categoryGp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginStart="28dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_category"
                        android:textAppearance="?textAppearanceHeadline6"
                        android:gravity="center"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addCategoryBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/add_category"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.hamiddev.todolist.ui.scroll.ObservableScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_btn"
        android:gravity="center"
        app:backgroundTint="?colorPrimary"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="12dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>